--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,32 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
-  </div>
+  <ion-row>
+    <ion-col size="3"><ion-button class="btn">Funcionarios</ion-button></ion-col>
+    <ion-col size="9"><ion-button class="btn">Inserir</ion-button></ion-col>
+  </ion-row>
+
+  <!-- <ion-row>
+    <ion-col size="4"><p>Cargo</p></ion-col>
+    <ion-col size="2"><ion-checkbox>Nome</ion-checkbox></ion-col>
+    <ion-col size="2"><ion-checkbox>Cargo</ion-checkbox></ion-col>
+    <ion-col size="2"><ion-checkbox>Cidade</ion-checkbox></ion-col>
+    <ion-col size="2"><ion-checkbox>Telefone</ion-checkbox></ion-col>
+  </ion-row> -->
+
+  <ion-row>
+    <ion-col>
+      <ion-list>
+        <ng-container *ngFor="let funcionarios of this.funcionarios">
+          <ion-item>
+            <ion-label> Nome do Funcionario: {{ funcionarios.Nome }} {{ funcionarios.Sobrenome }}</ion-label>
+            <ion-button (click)="remover(funcionarios.CodFun)"><ion-icon name='trash'></ion-icon></ion-button>
+          </ion-item>
+        </ng-container>
+      </ion-list>
+            
+            <ion-title>Modal</ion-title>
+            <ion-button (click)="setOpen(false)">Close</ion-button>
+    </ion-col>
+  </ion-row>
+  
 </ion-content>
